mType/tests/testFiles/annotation/error/nullable_primitive_annotation_param_error.mt
// MYT-375: nullable primitive annotation parameters remain invalid.

annotation BadNullable {
    int? value = null;
}
